<resources>
    <string name="app_name">MyArtBookNavigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="art_name">Art Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="year">Year</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>